Fri Dec  3 06:52:46 2010  Tanaka Akira  <akr@fsij.org>

	* compile.c: parenthesize macro arguments.

Fri Dec  3 04:08:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_alias_internal): use st_insert2 and change return
	  value to int.

	* encoding.c (enc_alias): follow enc_alias_internal.

Fri Dec  3 01:52:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_alias_internal): use xfree instead of free.

Thu Dec  2 23:52:26 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: entry for ruby_vm_at_exit().

	* eval.c (ruby_cleanup): bug fix around at_exit (1) timing was
	  wrong. (2) execution order was opposite.

Thu Dec  2 23:05:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (RCFLAGS): -nologo switch is only available in
	  newer versions of rc.exe. fixed the problem of r30012.

Thu Dec  2 21:28:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/lib/json/add/rails.rb: removed.

Thu Dec  2 21:22:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_alias_internal): free the copied key and
	  return NULL when given key is already regisitered.

	* encoding.c (enc_alias): call set_encoding_const only when the
	  alias is not registered yet.

Thu Dec  2 19:58:24 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vm_at_exit): new API.  This enables extension libs to
	  hook a VM termination.  Right now, because the VM we have is
	  process global, most extensions do not deallocate resources and
	  leave them to Operating System's reaping userland processes.  But
	  in a future we plan to have multiple VMs to run simultaneously in
	  a single process (MVM project).  At that stage we can no longer
	  rely on OSes and have to manage every resources to be reclaimed
	  properly.  So it is.  For a forward-compatibility reason this API
	  is introduced now, encouraging you to be as gentle as you can for
	  your resources; that is, tidy up your room.

	* include/ruby/vm.h: ditto.
