@@ -1,3 +1,8 @@
+Fri Dec  3 07:08:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/stringio/stringio.c (strio_getline): round upto next char
+	  boundary.  [ruby-dev:42674]
+
 Fri Dec  3 06:52:46 2010  Tanaka Akira  <akr@fsij.org>
 
 	* compile.c: parenthesize macro arguments.
